# simple-notepad-project

./: .gitignore  CMakeLists.txt  Notepad.md  find_replace_dialog.ui  line_number_area.cpp  line_number_area.h  main_window.cpp  main_window.h  notepad_exception.h  sort.h  spell_checker.cpp  spell_checker.h  spell_checker_highlighter.cpp  spell_checker_highlighter.h  text_transform.h  word_frequency_dialog.ui
