cmake_minimum_required(VERSION 3.22)
project(simple-notepad-project LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets)
qt_standard_project_setup()

qt_add_executable(
        Notepad
        main.cpp
        main_window.cpp
        text_transforms.h
        find_replace_dialog.ui
        word_frequency_dialog.ui
        sort.h
        spell_checker.cpp
        spell_checker.h
        spell_checker_highlighter.cpp
        spell_checker_highlighter.h
)
target_link_libraries(Notepad PRIVATE
        Qt6::Widgets
)